fix overflow issue on carousel

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -116,7 +116,7 @@
 
     .carousel {
         width: 320px;
-        height: 250px;
+        height: 260px;
         margin: 0 auto;
         
     }
